Bug fix for collapsing white-space in data-toggle

--- a/less/launcher.less
+++ b/less/launcher.less
@@ -76,10 +76,13 @@
           white-space: nowrap;
           &:before {
             display: inline-block;
+            margin-left: 0;
             margin-right: 0;
+            text-align: center;
+            width: 12px;
           }
           &.collapsed:before {
-            margin-left: 3px;
+            //margin-left: 3px;
           }
         }
       }
